# geohints

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .windsurfrules  AGENTS.md  IMAGE_OPTIMIZATION.md  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vercel.json  vite.config.ts
.beads/: issues.jsonl
.kiro/specs/01-foundation-cleanup/: design.md  requirements.md
.kiro/specs/02-landing-page/: design.md  requirements.md
.kiro/specs/03-language-search-filter/: design.md  requirements.md
.kiro/specs/04-text-analyzer/: design.md  requirements.md
.kiro/specs/05-bollards/: requirements.md
.kiro/specs/06-driving-side/: requirements.md
.kiro/specs/07-domains/: requirements.md
apps/web/: package.json  tsconfig.json  vite.config.ts
docs/research/: image-similarity-technologies.md
geohints-nx/: .gitignore  README.md  package.json  pnpm-lock.yaml
libs/scraper/: .oxlintrc.json  README.md  package.json  tsconfig.json
libs/shared/: package.json
poc/image-clustering/: .gitignore  README.md  cluster.py  download_sample.py  pyproject.toml  visualize.py
scripts/: config.ts  generate-bollards-data.ts  manifest.ts  process-images.ts  scrape-geohints.ts  scrape-geomastr.ts  types.ts  upload-r2.ts  upload-wrangler.ts
scripts/services/: FileSystemService.ts  HttpClientService.ts
src/: global.css
src/data/: bollards.ts  countries.ts  languageCharacters.ts
src/hooks/: useCommandPalette.ts
src/lib/: analyzer.ts  search.ts  types.ts
src/routes/: index.tsx  layout.tsx  service-worker.ts  styles.css
(+131 files in other folders)
